--- a/posts/2048.md
+++ b/posts/2048.md
@@ -3,3 +3,10 @@ layout: post
 title: 2048
 src: ../src/2048.js
 ---
+
+### how to play
+use your arrow keys to slide the tiles around. tiles that are the same value will be added together! your objective is to reach 2048, though it is possibly to go much higher!
+
+### description
+this was more of a fun thing i wanted to implement - and i want to practice animations in js! 
+
