--- a/posts/2048.md
+++ b/posts/2048.md
@@ -5,8 +5,9 @@ src: ../src/2048.js
 ---
 
 ### how to play
-use your arrow keys to slide the tiles around. tiles that are the same value will be added together! your objective is to reach 2048, though it is possible to go much higher!
+use your arrow keys to slide the tiles around. when tiles of the same value collide, their value will add together.
+your objective is to reach 2048, though it is possible to go much higher!
 
 ### description
-this was more of a fun thing i wanted to implement - and i want to practice animations in js! 
+this was more of a fun thing i wanted to implement - and i want to practice animations in js! i don't normally code considering timing and synchronous issues and so this was an interesting challenge (:
 
